[gd_scene load_steps=3 format=3 uid="uid://fusflluccm6j"]

[ext_resource type="Script" path="res://tracer/tracer.gd" id="1_ri4rc"]
[ext_resource type="Texture2D" uid="uid://ky1vmfhstsea" path="res://tracer/tracer.png" id="2_lt3rj"]

[node name="Tracer" type="Node2D"]
show_behind_parent = true
script = ExtResource("1_ri4rc")

[node name="TextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(25, 25)
mouse_filter = 0
texture = ExtResource("2_lt3rj")

[node name="Properties" type="ColorRect" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 14.0
offset_right = 50.0
offset_bottom = 94.0
grow_horizontal = 2
color = Color(0.839216, 0.870588, 0, 0.694118)

[node name="MarginContainer" type="MarginContainer" parent="Properties"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ColorRect" type="ColorRect" parent="Properties/MarginContainer"]
layout_mode = 2
color = Color(0.262932, 0.262932, 0.262932, 1)

[node name="MarginContainer" type="MarginContainer" parent="Properties/MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_right = 2

[node name="VBox" type="VBoxContainer" parent="Properties/MarginContainer/ColorRect/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TimeLabel" type="Label" parent="Properties/MarginContainer/ColorRect/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "T : "

[node name="PositionLabel" type="Label" parent="Properties/MarginContainer/ColorRect/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "X : "

[node name="VelocityLabel" type="Label" parent="Properties/MarginContainer/ColorRect/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "V : "
